# task-automation

./: .gitignore  736398.json  main.py  mapping.py  pages.py  pyproject.toml  regex_test.py  slint_app.py  slint_login.py  wb_testing.py  workstation_funcs.py
ui/: app-window.slint  login-window.slint
