[project]
name = "task-creation-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "office365-rest-python-client>=2.6.2",
    "openpyxl>=3.1.5",
    "playwright>=1.52.0",
    "slint>=1.11.0a1",
    "tomlkit>=0.13.3",
]
